fix/overflow

--- a/src/pages/ContactPage/contact-page.css
+++ b/src/pages/ContactPage/contact-page.css
@@ -1,5 +1,6 @@
 .contact {
     min-height: 80vh;
+    overflow: hidden;
     padding: 46px 0px 0px 0px;
 }
 
